Fixed XX:PermSize to XX:MetaspaceSize for Java 8