@@ -288,6 +288,24 @@
 				<spark.binary.version>2.0</spark.binary.version>
 			</properties>
 		</profile>
+        <profile>
+            <id>java7</id>
+            <properties>
+                <spark.test.jvm.opts>-ea -Xms1024m -Xmx2048m -XX:PermSize=128m -XX:MaxPermSize=512m -XX:ReservedCodeCacheSize=128m</spark.test.jvm.opts>
+            </properties>
+            <activation>
+                <jdk>[,1.8)</jdk> <!-- version < 1.8 -->
+            </activation>
+        </profile>
+        <profile>
+            <id>java8</id>
+            <properties>
+                <spark.test.jvm.opts>-ea -Xms1024m -Xmx2048m -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=512m -XX:ReservedCodeCacheSize=128m</spark.test.jvm.opts>
+            </properties>
+            <activation>
+                <jdk>[1.8,)</jdk> <!-- version >= 1.8 -->
+            </activation>
+        </profile>
 		<profile>
 			<id>compile-xgboost</id>
 			<build>
